Fix overflow issue and responsive layout

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@
 }
 
 
-
 /* Michroma Font */
 @font-face {
   font-family: 'Michroma';
@@ -31,9 +30,9 @@
   font-style: normal;
 }
 
-html {
+html,body {
   scroll-behavior: smooth;
-  background: #000;
+  overflow-x: hidden;
 }
 .Zumma {
   font-family: 'Zumma Rough Bold', sans-serif;
